# ComputerGraphicProcessing

./: .gitignore  CMakeLists.txt  CMakePresets.json  Overview.md  extra  math.hh
CG_skel_w_MFC/: CG_skel_w_MFC.cpp  CG_skel_w_MFC.h  CG_skel_w_MFC.vcxproj  CG_skel_w_MFC.vcxproj.filters  Camera.cpp  Camera.h  CubeMeshModel.cpp  CubeMeshModel.h  Geometry.cpp  Geometry.h  Menu.cpp  Menu.h  MeshModel.cpp  MeshModel.h  ReadMe.txt  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  constants.h  mat.h  vec.h
CG_skel_w_MFC/Release/: CG_skel_w_MFC.exe.recipe  CG_skel_w_MFC.iobj  CG_skel_w_MFC.ipdb
CG_skel_w_MFC/Release/CG_skel_w_MFC.tlog/: CG_skel_w_MFC.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
freeglut/Release/freeglut.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
glew/Release/glew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
glew/lib/: glew.lib
include/: CG.h  Callbacks.h  Camera.h  Clipper.h  Constants.h  ControlState.h  Fragment.h  Geometry.h  Light.h  Material.h  MeshModel.h  MeshUtils.h  MyRGB.h  Rasterizer.h  RenderUtils.h  Renderer.h  Scene.h  Shader.h  UI.h  constants.h  geometry2.h  mat.h  vec.h
include/glad/: glad.h
resources/shaders/: shader.fs  shader.vs
src/: CG.cpp  Callbacks.cpp  Camera.cpp  Clipper.cpp  ControlState.cpp  Fragment.cpp  Geometry.cpp  Light.cpp  Material.cpp  MeshModel.cpp  MyRGB.cpp  Rasterizer.cpp  RenderUtils.cpp  Renderer.cpp  RendererScratch.cpp  Scene.cpp  UI.cpp  raster3d.cpp
